2008-11-30  smeghead <smeghead@users.sourceforge.jp>

    * 新規にプロジェクトを作成したときに管理ツールのスタイル設定で、スタイルシートの内容が全て表示されないのを修正。
      初期に作成する時に、sizeが不適切だったため。

2008-11-26  smeghead <smeghead@users.sourceforge.jp>

    * 複数行テキスト項目で使用できるチケットへのリンクを複数プロジェクト対応した。他のプロジェクトへのリンクは未対応。

2008-11-24  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールの項目の削除が、機能しないバグを修正した。
      cgiPathInfoの参照の方法が、複数プロジェクト前の方法だったのが原因だった。

2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * 予約されているtopというプロジェクトIDを追加できないようにした。 
    * プロジェクトIDにURLで使用できない文字が指定された場合に対応した。
      プロジェクトIDをURLとして使用する場合は、urlエンコードするようにした。

2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * 1.2.1-alpha リリース

2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * プロジェクトの画面から、プロジェクト一覧へのリンクを追加。
    * 

2008-11-23  smeghead <smeghead@users.sourceforge.jp>

    * 全体の管理ページの作成途中。

2008-11-10  smeghead <smeghead@users.sourceforge.jp>

    * 全体のトップページの作成。
    * トップの編集機能作成。

2008-11-09  smeghead <smeghead@users.sourceforge.jp>

    * 複数プロジェクト対応の開始。
    * ファイルの分割。プロジェクト毎のアクション処理とトップのアクション処理を別のファイルに記述するようにする。
    * プロジェクト部分のアクションが新しいURLで動作するようになった。
     - 旧URL http://www.example.com/starbug1/index.cgi/ticket/10
     - 新URL http://www.example.com/starbug1/index.cgi/project_name/ticket/10
    * 不要なファイルが存在したので削除した。
    * 複数プロジェクト対応用のデータベース追加

2008-11-03  smeghead <smeghead@users.sourceforge.jp>

    * エラーが発生してdie関数を呼び出した時、ブラウザにもエラーの内容を表示するようにした。
      セキュリティの問題よりも、Starbug1の問題を解決できた方がいいので、ファイ
      ル名、行数、エラーメッセージも表示するようにした。

2008-10-26  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.4 リリース

2008-10-26  smeghead <smeghead@users.sourceforge.jp>

    * リリース準備

2008-10-23  smeghead <smeghead@users.sourceforge.jp>

    * TAKAHASHI hideakiさんから頂いたパッチを取り込んだ。
    * バッファオーバーフローの対策
    * コンパイル時の警告の回避

2008-10-11  smeghead <smeghead@users.sourceforge.jp>

    * 1.1.3 リリース

2008-10-04  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールのスタイル設定で、正しく値を取得できていないために、スタイル設定が上書きされてしまう問題を修正。
    * h4のスタイルシート設定を追加。トップページの編集部分のスタイル調整のため。