@@ -1,5 +1,10 @@
 2008-11-30  smeghead <smeghead@users.sourceforge.jp>
 
+    * 複数行テキストの項目でのチケットリンクを複数プロジェクトに対応した。
+      他のプロジェクトへのリンクも記述できるようにした。(#project:102 の形式)
+
+2008-11-30  smeghead <smeghead@users.sourceforge.jp>
+
     * 新規にプロジェクトを作成したときに管理ツールのスタイル設定で、スタイルシートの内容が全て表示されないのを修正。
       初期に作成する時に、sizeが不適切だったため。
 
